welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: reassignment to val
	if ( a = b ) { 
               ^sumDouble:2: error: type mismatch;
 found   : Unit
 required: Integer
	if ( a = b ) { 
        ^